# hugr-client

./: .gitignore  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml
.github/workflows/: publish.yml
.virtual_documents/: Untitled.ipynb  Untitled1.ipynb
hugr/: __init__.py  arrow_flatten.py  client.py  connections.py  geoarrow.py  spool.py  stream.py
