[project]
name = "hugr-client"
version = "0.2.0"
description = "Python client for Hugr Arrow IPC over multipart/mixed"
authors = [
    { name = "Hugr-lab", email = "gribanov.vladimir@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
    "requests",
    "requests-toolbelt",
    "pyarrow>=14.0",
    "pandas",
    "numpy",
    "geopandas",
    "shapely",
    "websockets",
]

[project.optional-dependencies]
viz = ["keplergl", "pydeck", "folium", "matplotlib", "mapclassify"]

[project.urls]
Homepage = "https://github.com/hugr-lab/hugr-client"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310', 'py311']